add images to right positions